--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
     <section id="about" class="py-16 bg-white">
         <div class="container mx-auto px-6">
             <div class="max-w-4xl mx-auto text-center">
-                <h2 class="text-3xl font-bold mb-8">About TechBoutique</h2>
+                <h2 class="text-3xl font-bold mb-8">About TechHub</h2>
                 <p class="text-gray-600 mb-6">
-                    TechBoutique is a premier destination for technology enthusiasts and professionals seeking 
+                    TechHub is a premier destination for technology enthusiasts and professionals seeking 
                     the latest and greatest in electronics and gadgets.
                 </p>
                 <p class="text-gray-600">
@@ -154,7 +154,7 @@
         <div class="container mx-auto px-6">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-xl font-bold mb-4">TechBoutique</h3>
+                    <h3 class="text-xl font-bold mb-4">TechHub</h3>
                     <p class="text-gray-400">Your trusted partner for premium technology and electronics</p>
                 </div>
                 <div>
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-                <p>© 2024 TechBoutique. All rights reserved.</p>
+                <p>© 2024 TechHub. All rights reserved.</p>
             </div>
         </div>
     </footer>
